create part 1 and part 2

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                 <li class="navigation__item">
                     <a href="bootstrap-exsample.html" class="navigation__link">Bootstrap-exsample</a>
                 </li>
+                <li class="navigation__item">
+                    <a href="nth-child.html" class="navigation__link">Nth-child</a>
+                </li>
             </ul>
         </nav>
     </header> 
