create a bootstrap-template

--- a/bootstrap-exsample.html
+++ b/bootstrap-exsample.html
@@ -38,10 +38,10 @@
                 </li>
                 <li class="navigation__item">
                     <a href="catalog.html" class="navigation__link">Catalog</a>
-                </li>
+                </li>                
                 <li class="navigation__item">
-                    <a href="bootstrap-exsample.html" class="navigation__link">Bootstrap-exsample</a>
-                </li>
+                  <a href="nth-child.html" class="navigation__link">Nth-child</a>
+              </li>
             </ul>
         </nav>
     </header> 
@@ -178,6 +178,36 @@
             </div>
         </div>
       </div>
+      <hr>
+      <section class="bstp-template">
+        <h2>Шаблон структуры</h2>
+        <div class="container-xxl">
+          <div class="row">
+            <div class="col">
+              &lt;header&gt;
+            </div>            
+          </div>
+          <div class="row">
+            <div class="col">
+              &lt;nav&gt;
+            </div> 
+            <div class="row">              
+              <div class="col-5">
+                &lt;article&gt;
+                <div class="col sect-mod">
+                  &lt;section&gt;
+                </div> 
+              </div>
+              <div class="col">
+                &lt;aside&gt;
+              </div> 
+              <div class="row">
+                <div class="col">
+                  &lt;footer&gt;
+                </div>            
+              </div>
+        </div>
+      </section>
       
     <script src="/JS/bootstrap-5.min.js">
 
